--- a/app.json
+++ b/app.json
@@ -1,12 +1,35 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/course/course",
+    "pages/community/community"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "color": "#a9b7b7",
+    "selectedColor": "#11cd6e",
+    "borderStyle": "black",
+    "list": [{
+      "selectedIconPath": "images/tabBar/index_press.png",
+      "iconPath": "images/tabBar/index.png",
+      "pagePath": "pages/index/index",
+      "text": "通知"
+    }, {
+      "selectedIconPath": "images/tabBar/course_press.png",
+      "iconPath": "images/tabBar/course.png",
+      "pagePath": "pages/course/course",
+      "text": "课程"
+    }, {
+      "selectedIconPath": "images/tabBar/community_press.png",
+      "iconPath": "images/tabBar/community.png",
+      "pagePath": "pages/community/community",
+      "text": "社区"
+    }]
   }
 }
