--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,13 @@
 		"beforeUpload": "npm run compile"
 	},
 	"setting": {
-		"newFeature": true
+		"urlCheck": true,
+		"es6": true,
+		"postcss": true,
+		"minified": true,
+		"newFeature": true,
+		"nodeModules": true,
+		"autoAudits": false
 	},
 	"appid": "wx300eb7d628a5e101",
 	"condition": {}
