tabbar配色&course布局交互微调
星期几槽加了自动滑动效果，改马卡龙配色

--- a/app.json
+++ b/app.json
@@ -15,24 +15,28 @@
   },
   "tabBar": {
     "color": "#a9b7b7",
-    "selectedColor": "#11cd6e",
+    "selectedColor": "＃b8f1cc",
     "borderStyle": "black",
-    "list": [{
-      "selectedIconPath": "images/tabBar/course_press.png",
-      "iconPath": "images/tabBar/course.png",
-      "pagePath": "pages/course/course",
-      "text": "课程"
-    }, {
-      "selectedIconPath": "images/tabBar/index_press.png",
-      "iconPath": "images/tabBar/index.png",
-      "pagePath": "pages/index/index",
-      "text": "通知"
-    }, {
-      "selectedIconPath": "images/tabBar/community_press.png",
-      "iconPath": "images/tabBar/community.png",
-      "pagePath": "pages/community/community",
-      "text": "社区"
-    }]
+    "list": [
+      {
+        "selectedIconPath": "images/tabBar/course_press.png",
+        "iconPath": "images/tabBar/course.png",
+        "pagePath": "pages/course/course",
+        "text": "课程"
+      },
+      {
+        "selectedIconPath": "images/tabBar/index_press.png",
+        "iconPath": "images/tabBar/index.png",
+        "pagePath": "pages/index/index",
+        "text": "通知"
+      },
+      {
+        "selectedIconPath": "images/tabBar/community_press.png",
+        "iconPath": "images/tabBar/community.png",
+        "pagePath": "pages/community/community",
+        "text": "社区"
+      }
+    ]
   }
 }
 
