--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "pages": [
+    "pages/course/course",
     "pages/launch/launch",
     "pages/binding/binding",
     "pages/index/index",
-    "pages/course/course",
+    "pages/courseDetail/courseDetail",
     "pages/logs/logs",
     "pages/community/community"
   ],
